# ikaros-3

./: .gitignore  CMakeLists.txt  README.md  System.h  Untitled.ikg  protocol_output.tsv  test.tsv  tmp
Source/: ikaros.h  (+1 more)
Source/Modules/UtilityModules/: CMakeLists.txt
Source/Modules/UtilityModules/Add/: Add.cc  Add.ikc  Add_test.ikg
Source/Modules/UtilityModules/Add/Examples/: Add_test.ikg
Source/Modules/UtilityModules/ClearSkyIrradiance/: ClearSkyIrradiance.cc
Source/Modules/UtilityModules/CombineFunctions/Add/: Add_test.ikg
Source/Modules/UtilityModules/CombineFunctions/Multiply/: Multiply.cc
Source/Modules/UtilityModules/Constant/: Constant.cc  Constant.ikc  Constant_test.ikg
Source/Modules/UtilityModules/EnergyMeter/: EnergyMeter.cc  EnergyMeter.ikc
Source/Modules/UtilityModules/FunctionGenerator/: FunctionGenerator_test.ikg
Source/Modules/UtilityModules/Idle/: Idle_test.ikg
Source/Modules/UtilityModules/Idle/Examples/: Idle_test.ikg
Source/Modules/UtilityModules/KernelTestModule/: KernelTestModule.cc  KernelTestModule.ikc
Source/Modules/UtilityModules/Logger/: Logger.cc
Source/Modules/UtilityModules/Oscillator/: Oscillator.cc  Oscillator.ikc  Oscillator_test.ikg
Source/Modules/UtilityModules/OutputFile/: OutputFile.cc  OutputFile.ikc  OutputFile_test.ikg
Source/Modules/UtilityModules/Print/: Print.cc  Print.ikc
Source/Modules/UtilityModules/Protocol/: Protocol.cc  Protocol_test.ikg
Source/Modules/UtilityModules/Randomizer/: Randomizer.cc  Randomizer.ikc  Randomizer_test.ikg
Source/Modules/UtilityModules/Scale/: Scale_test.ikg
(+174 files in other folders)
